--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,59 @@ body {
   line-height: 200%;
 }
 
-h1 {
+.heading {
+  text-align: center;
   font-family: Pokemon Hollow;
+  text-shadow: 4px 4px #ffe54c;
+  text-decoration: none;
 }
+
+.heading:hover {
+  text-shadow: none;
+  text-decoration: none;
+}
+
+.heading:visited {
+  color: black;
+  text-decoration: none;
+}
+
+.pokemon-list {
+  margin-left: -40px;
+  list-style-type: none;
+}
+
+.button-class {
+    font-size: 16px;
+    letter-spacing: 1px;
+    padding: 13px 20px 13px;
+    width: 10rem;
+    margin-top: 20px;
+    border: 1px solid black;
+    cursor: pointer;
+    position: relative;
+    background-color: rgba(0, 0, 0, 0);
+  }
+
+  .button-class:after {
+    content: "";
+    background-color: #ffe54c;
+    width: 100%;
+    z-index: -1;
+    position: absolute;
+    height: 100%;
+    top: 7px;
+    left: 7px;
+    transition: 0.2s;
+  }
+
+  .button-class:hover:after {
+    top: 0px;
+    left: 0px;
+  }
+
+  @media (min-width: 768px) {
+    .button-class {
+      padding: 13px 50px 13px;
+    }
+  }
