--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,8 @@ body {
 .button-class {
   font-size: 16px;
   letter-spacing: 1px;
-  width: 10rem;
+  text-transform: capitalize;
+  width: 15rem;
   margin-top: 20px;
   border: 1px solid black;
   cursor: pointer;
