--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,16 @@ body {
 
 }
 
+.loading-message {
+	position: fixed;
+	bottom: 20px;
+	right: 40px;
+}
+
+.hidden {
+	display: none;
+}
+
 .heading:hover {
   text-shadow: none;
   text-decoration: none;
@@ -113,8 +123,94 @@ body {
   left: 0px;
 }
 
+#modal-container {
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+
+  /* to show it above other content */
+  z-index: 999;
+
+  /* to allow scrolling if the screen is not high enough*/
+  overflow: auto;
+
+  /* this is used to center the modal */
+  display: grid;
+  text-align: center;
+}
+
+.modal {
+  margin: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  background: #ffe54c;
+  padding: 15px;
+  width: 100%;
+  max-width: 700px;
+  text-align: left;
+}
+
+.modal-close {
+  float: right;
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal h1 {
+  margin-top: 0;
+}
+
+.modal p {
+  margin-bottom: 0;
+}
+
+#modal-container {
+  display: none;
+}
+
+#modal-container.is-visible {
+  /* CSS for modal container - add your own desired CSS styles here */
+  display: block;
+}
+
+.modal img {
+	width: 200px;
+	height: auto;
+	margin-bottom: 10px;
+}
+
+.pokemon-name {
+    font-family: Pokemon Hollow;
+    text-transform: capitalize;
+    size: 35px;
+    text-align: center;
+}
+
+.content-element {
+  margin-top: 50px;
+  margin-left: 100px;
+  float: left;
+}
+
+.modal-img {
+  margin-right: 100px;
+  float: right;
+}
+
 @media (min-width: 768px) {
   .button-class {
     padding: 13px 50px 13px;
+  }
+  .pokemon-list{
+    columns: 2;
   }
 }
