--- a/css/styles.css
+++ b/css/styles.css
@@ -17,98 +17,41 @@
 }
 
 body {
-  line-height: 200%;
-}
-
-.heading {
   text-align: center;
-  font-family: Pokemon Hollow;
-  text-shadow: 4px 4px #ffe54c;
-  text-decoration: none;
+  background-color: #DAEAF1;
 }
 
-.bounceInDown {
-   -webkit-animation-name: bounceInDown;
-   animation-name: bounceInDown;
+.navbar {
+  background-color: #DAEAF1;
 }
 
-.animated {
-   -webkit-animation-duration:2s;
-   -o-animation-duration:2s;
-   animation-duration:2s;
+.logo {
+  height: 100px;
 }
 
-@-webkit-keyframes bounceInDown  {
-   0%, 60%, 75%, 90%, 100% {
-      transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-   }
-
-   0% {
-      opacity: 0;
-      transform: translate3d(0, -3000px, 0);
-   }
-
-   60% {
-      opacity: 1;
-      transform: translate3d(0, 25px, 0);
-   }
-
-   75% {
-      transform: translate3d(0, -10px, 0);
-   }
-
-   90% {
-      transform: translate3d(0, 5px, 0);
-   }
-
-   100% {
-      transform: none;
-      opacity: 1;
-   }
-
+.navbar-brand {
+   font-family: Pokemon Hollow;
 }
 
-.loading-message {
-	position: fixed;
-	bottom: 20px;
-	right: 40px;
-}
-
-.hidden {
-	display: none;
-}
-
-.heading:hover {
-  text-shadow: none;
-  text-decoration: none;
-}
-
-.heading:visited {
-  color: black;
-  text-decoration: none;
-}
-
-.pokemon-list {
-  margin-left: -40px;
-  list-style-type: none;
-  text-align: center;
-}
-
-.button-class {
-  font-size: 16px;
-  letter-spacing: 1px;
+.card {
+  height: 250px;
+  font-size: 14px;
   text-transform: capitalize;
-  width: 15rem;
-  margin-top: 20px;
+  margin-top: 30px;
+  margin-right: 30px;
   border: 1px solid black;
+  border-radius: 15px;
   cursor: pointer;
   position: relative;
   background-color: rgba(0, 0, 0, 0);
+  text-align: center;
 }
 
-.button-class:after {
+.card:after {
   content: "";
-  background-color: #ffe54c;
+  border-radius: 15px;
+  box-shadow: 2px 2px 5px grey;
+  background-color: #FFC54D;
   width: 100%;
   z-index: -1;
   position: absolute;
@@ -118,98 +61,40 @@ body {
   transition: 0.2s;
 }
 
-.button-class:hover:after {
+.card:hover:after {
   top: 0px;
   left: 0px;
 }
 
-#modal-container {
-  position: fixed;
-  padding: 20px;
-  box-sizing: border-box;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-
-  /* to show it above other content */
-  z-index: 999;
-
-  /* to allow scrolling if the screen is not high enough*/
-  overflow: auto;
-
-  /* this is used to center the modal */
-  display: grid;
-  text-align: center;
+.card-img-top {
+   margin-left: 2em;
+   margin-top: 3em;
+   margin-bottom: 2em;
 }
 
-.modal {
-  margin: auto;
-  display: inline-block;
-  box-sizing: border-box;
-  background: #ffe54c;
-  padding: 15px;
-  width: 100%;
-  max-width: 700px;
-  text-align: left;
+.modal-content {
+  border-radius: 15px;
+  border-width: 15px;
+  border-style: solid;
 }
 
-.modal-close {
-  float: right;
-  -webkit-appearance: none;
-  border: 0;
-  background: none;
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+.modal-header {
+    border-bottom: 0 none;
+    margin: auto;
 }
 
-.modal h1 {
-  margin-top: 0;
+.modal-body {
+  font: 'Play', sans-serif;
 }
 
-.modal p {
-  margin-bottom: 0;
+.modal-footer {
+    border-top: 0 none;
 }
 
-#modal-container {
-  display: none;
+.modal-title {
+  text-transform: capitalize;
 }
 
-#modal-container.is-visible {
-  /* CSS for modal container - add your own desired CSS styles here */
-  display: block;
-}
-
-.modal img {
-  align-items: center;
-	width: 200px;
-	height: auto;
-	margin-bottom: 10px;
-  margin-left: 240px;
-}
-
-.pokemon-name {
-    font-family: Pokemon Hollow;
-    text-transform: capitalize;
-    size: 35px;
-    text-align: center;
-}
-
-.content-element {
-  text-align: center;
-}
-
-.modal-img {
-  text-align: center;
-}
-
-@media (min-width: 768px) {
-  .button-class {
-    padding: 13px 50px 13px;
-  }
-  .pokemon-list{
-    columns: 2;
-  }
+.row {
+   padding: 0;
 }
